--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <div class="card">
 
-      <img src="images/bg-pattern-card.svg" class="card__background"/>
+      <img src="images/bg-pattern-card.svg" class="card__background" alt=""/>
       
       <!-- Profile image -->
       <img src="images/image-victor.jpg" alt="Victor Crest" class="card__profile-image"/>
@@ -56,8 +56,8 @@
     Coded by <a href="#">Oscar K.</a>.
   </div>
 
-  <img class="bg-pattern-top" src="images/bg-pattern-top.svg"/>
-  <img class="bg-pattern-bottom" src="images/bg-pattern-bottom.svg"/>
+  <img class="bg-pattern-top" src="images/bg-pattern-top.svg" alt=""/>
+  <img class="bg-pattern-bottom" src="images/bg-pattern-bottom.svg" alt=""/>
 
 </body>
 </html>
